--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 <body>
     <%- include('includes/header') %>
     <form action="/" method="post">
         <input type="text" name="title" id="title">
         <input type="text" name="description" id="description">
-        <input type="text" name="user" id="user">
+        <select name="user" id="user">
+            <% users.map( user => { %>
+                <option value="<%= user._id %>"><%= user.firstname %></option>
+            <% }) %>
+        </select>
         <input type="submit" value="Submit">
     </form>
-    <% if (articles.length > 0) { %>
+    <% if (articles && articles.length > 0) { %>
         <ul>
-            <% articles.map( user => { %>
-                <li><%= articles.title %> <%= articles.description %> <%= articles.user.firstname %></li>
+            <% articles.map( article => { %>
+                <li>
+                    <a href="/article/<%= article._id %>">
+                        <%= article.title %> <%= article.description %>
+                    </a>
+                </li>
             <% }) %>
         </ul>
     <% } else { %>
         <p>Aucun article</p>
     <% } %>
+    <%- include('includes/footer') %>
 </body>
-</html>
